Fixing some spacing in the header

--- a/css/project8.css
+++ b/css/project8.css
@@ -15,6 +15,14 @@ html, body, ul, h1, h2, h3, h4, h5, h6 {
   border-left: 1px solid grey;
 }
 
+.header_menu ul li {
+  padding-left: 10px;
+}
+
+.header_menu ul li i {
+  margin-right: 10px;
+}
+
 .logo {
   display: inline;
 }
@@ -29,7 +37,6 @@ header {
 }
 
 nav {
-  width: 1200px;
   margin: 0 auto;
 }
 
